
  * rtcontrol: Removed short options from actions that are non-interactive
    by default, i.e. -S(top) and -C(lose); update your scripts accordingly
  * rtcontrol: "-s*" sorts according to the given output format
  * rtcontrol: "--stats" and "--summary" to print a statistical summary; 
    note that for some fields (e.g. dates) and some kinds of formatting the
    summary values might not make sense.
  * rtcontrol: Added "--detach", so you can call rtcontrol directly from
    rtorrent methods and event handlers
  * rtcontrol: Added "field=/regex/" pattern filter
  * rtcontrol: Added Tempita output templates, they have to start with 
    '{{' to be recognized, use '{{#}}' if you don't start with a field; 
    this allows "if" and "for" loops, for more on the syntax, see
    http://pythonpaste.org/tempita/
  * chtor: "-s field" now deletes the field (assignment without any value)
  * lstor: Added virtual "__size__" field
  * Bugfix: Conditions nested 2 or more levels didn't work

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 02 Mar 2011 01:24:15 +0100

pyroscope (0.3.10) hardy; urgency=low

  * New "hashcheck" tool to check data against existing torrent file
  * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
    results in ncurses view (modifies -V and --to-view behaviour)
  * rtcontrol: New options "--purge" and "--cull" for data deletion
  * rtcontrol: Prefix "--sort-fields" names with a '-' to get
    descending order for that field only
  * lstor: new option --skip-validation to show the contents of
    broken metafiles (validation errors just result in warnings)

 -- pyroscope <pyroscope.project@gmail.com>  Wed, 02 Mar 2011 01:11:58 +0100

pyroscope (0.3.9) hardy; urgency=low

  * Some internal fixes, mostly better error reporting

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 14:04:09 +0200

pyroscope (0.3.8) hardy; urgency=low

  * rtxmlrpc: Added --xml option
  * chtor: Added --set and --clean-xseed options